# course_work

./: CMakeLists.txt  CMakeProject1.cpp  config.h.in  data.db  db.cpp  graphic.h  main_window.cpp  main_window.h  resh.cpp  resh.h  reshenie.h  task_w.h  usl.cpp  usl.h  usloviya.h  vvod_u.cpp  vvod_u.h
